add GET login route
